--- a/style.css
+++ b/style.css
@@ -1,51 +1,52 @@
-*{
-    box-sizing: border-box;
-   }
+.container {
+    max-width: 400px;
+    margin: 10vh auto 0 auto;
+    box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
+}
+
+#display {
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
+    padding: 16px 8px;
+    font-size: 25px;
+    background-color: black;
+    color: blanchedalmond;
+}
+
+.buttons {
+    background-color: orangered;
+    color: rgb(255, 255, 255);
+    
+    display: grid;
    
-   body{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
-   }
-   
-   .calculator{
-    flex: 0 0 95%;
-   }
-   .screen{
-    width: 100%;
-    font-size: 7rem;
-    padding: 1rem;
-    background: rgb(41,41,56);
+    border-bottom: 1px solid #999;
+    border-left: 1px solid#999;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.buttons > div {
+    border-top: 1px solid #999;
+    border-right: 1px solid#999;
+    background-color: papayawhip;
+    color: black;
+}
+
+.button {
+    border: 0.5px solid #999;
+    line-height: 100px;
+    text-align: center;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+#equal {
+    background-color: rgb(85, 85, 255);
     color: white;
-    border:none;
-   }
-   
-   .buttons{
-    display: flex;
-    flex-wrap: wrap;
-   }
-   
-   button{
-    flex:0 0 25%;
-    border: 1px solid black;
-    padding: 0.25rem 0;
-   }
-   
-   .btn-yellow{
-    background: rgb(245,146,62);
+}
+
+.button:hover {
+    background-color: #323330;
     color: white;
-   }
-   .btn-grey{
-    background: rgb(224,224,224);
-   }
-   .btn,.btn-equal,.btn-clear{
-    font-size: 4rem;
-   }
-   .btn-equal{
-    background: green;
-   }
-   .btn-clear{
-    background: red;
-   } 
+    transition: 0.5s ease-in-out;
+}
